--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
               echo "Repository belum di-clone. Cloning...";
               mkdir -p ~/senpro/481218/modul02;
               cd ~/senpro/481218/modul02;
-              git clone https://github.com/Rexiar/senpro-github-action.git;
+              git clone git@github.com:Rexiar/senpro-github-action.git;
             } ||
             {
               echo "Repository sudah ada. Building...";
