--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
 name: Test, Build, and Deploy | Modul 01 - Lab2.2 Senior Project
-
+ 
 on:
   push:
     branches: [main]
-
+ 
 jobs:
   test-build:
     runs-on: ubuntu-latest
-
+ 
     strategy:
       matrix:
         node-version: [16.x]
-
+ 
     steps:
       - uses: actions/checkout@v2
       - name: Testing Build pre-Deploy
@@ -21,36 +21,37 @@ jobs:
           cache: "npm"
       - run: npm i
       - run: npm run build
-
+ 
   deploy:
-    needs: test-build
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-    steps:
-      - name: Build app on VM
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
-          scripts: |
-            eval "$(ssh-agent -s)"
-            ssh-add ~/.ssh/vm_senpro_modul2_9
-            echo "Cek folder project";
-            [ ! -d "${HOME}/senpro/481218/modul02/senpro-github-action/" ] &&
-            {
-              echo "Repository belum di-clone. Cloning...";
-              mkdir -p ~/senpro/481218/modul02;
-              cd ~/senpro/481218/modul02;
-              git clone git@github.com:Rexiar/senpro-github-action.git;
-            } ||
-            {
-              echo "Repository sudah ada. Building...";
-              cd ~/senpro/481218/modul02/senpro-github-action;
-              git restore .;
-              git pull origin main;
-            }
+      needs: test-build
+      runs-on: ubuntu-latest
+ 
+      strategy:
+          matrix:
+              node-version: [16.x]
+      steps:
+          - name: Build app on VM
+            uses: appleboy/ssh-action@master
+            with:
+              host: ${{ secrets.HOST }}
+              username: ${{ secrets.USERNAME }}
+              password: ${{ secrets.PASSWORD }}
+              port: ${{ secrets.PORT }}
+              script: |
+                  eval "$(ssh-agent -s)"
+                  ssh-add ~/.ssh/vm_senpro_modul2_9
+                  echo "Cek folder project";
+                  [ ! -d "${HOME}/senpro/481218/modul02/senpro-github-action/" ] &&
+                  {
+                      echo "Repository belum di-clone. Clonig...";
+                      mkdir -p ~/senpro/481218/modul02;
+                      cd ~/senpro/473742/modul02;
+                      git clone git@github.com:Rexiar/senpro-github-action.git;
+                  } ||
+                  {
+                    echo "Repository sudah ada. Building...";
+                    cd ~/senpro/481218/modul02/senpro-github-action;
+                    git restore .;
+                    git pull origin main;
+                  }
+ 
